--- a/src/app/pages/dashboard/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/pages/dashboard/admin-dashboard/admin-dashboard.component.html
@@ -17,7 +17,7 @@
             </div>
           </mat-card-header>
           <mat-card-content class="m-b-32 p-x-24">
-            <h4 class="mat-headline-5">{{ TotalEmployees }}</h4>
+            <h4 class="mat-headline-5">{{ totalEmployees }}</h4>
           </mat-card-content>
         </mat-card>
       </div>
@@ -33,7 +33,7 @@
             </div>
           </mat-card-header>
           <mat-card-content class="m-b-32 p-x-24">
-            <h4 class="mat-headline-5">{{ TotalDepartments }}</h4>
+            <h4 class="mat-headline-5">{{ totalDepartments }}</h4>
           </mat-card-content>
 
         </mat-card>
