--- a/src/app/pages/dashboard/employee-dashboard/employee-dashboard.component.html
+++ b/src/app/pages/dashboard/employee-dashboard/employee-dashboard.component.html
@@ -1,9 +1,11 @@
 <div class="row">
     <div class="col-lg-12">
       <div class="row">
+
         <!-- --------------------------------------------------------------------------- -->
-        <!-- Widgets -->
+        <!-- Employee TaskCount Widgets -->
         <!-- --------------------------------------------------------------------------- -->
+
         <div class="col-lg-3 col-sm-4">
           <mat-card class="cardWithShadow">
             <mat-card-header class="d-flex align-items-center p-x-24">
@@ -72,9 +74,11 @@
       </div>
     </div>
   
+
     <!-- --------------------------------------------------------------------------- -->
-    <!-- Sales Overview -->
+    <!-- Employee Details  -->
     <!-- --------------------------------------------------------------------------- -->
+
     <div class="col-lg-7">
       <mat-card class="cardWithShadow">
         <mat-card-header>
@@ -97,13 +101,15 @@
             </mat-card-content>
           </mat-card>
 
-            </div>
-        <!-- <div *ngIf="!employeeDetails">Loading employee task...</div> -->
-          
+        </div>
         </mat-card-content>
       </mat-card>
     </div>
     
+    <!-- --------------------------------------------------------------------------- -->
+    <!-- Employee Task Analytics  -->
+    <!-- --------------------------------------------------------------------------- -->
+
     <div class="col-lg-5">
       <mat-card class="cardWithShadow">
         <mat-card-content class="p-24">
