--- a/src/app/pages/dashboard/manager-dashboard/manager-dashboard.component.html
+++ b/src/app/pages/dashboard/manager-dashboard/manager-dashboard.component.html
@@ -2,7 +2,7 @@
     <div class="col-lg-12">
       <div class="row">
         <!-- --------------------------------------------------------------------------- -->
-        <!-- Widgets -->
+        <!-- Manager TaskCount Widgets -->
         <!-- --------------------------------------------------------------------------- -->
         <div class="col-lg-3 col-sm-4">
           <mat-card class="cardWithShadow">
@@ -73,8 +73,9 @@
     </div>
   
     <!-- --------------------------------------------------------------------------- -->
-    <!-- Sales Overview -->
+    <!-- Manager Details -->
     <!-- --------------------------------------------------------------------------- -->
+
     <div class="col-lg-7">
       <mat-card class="cardWithShadow">
         <mat-card-header>
@@ -101,6 +102,11 @@
       </mat-card>
     </div>
     
+
+    <!-- --------------------------------------------------------------------------- -->
+    <!-- Manager Task Analytics -->
+    <!-- --------------------------------------------------------------------------- -->
+
     <div class="col-lg-5">
       <mat-card class="cardWithShadow">
         <mat-card-content class="p-24">
