--- a/src/app/pages/employee/employee.component.html
+++ b/src/app/pages/employee/employee.component.html
@@ -1,14 +1,18 @@
+<!-- The component's template starts here -->
 <div class="col-lg-12">
+  <!-- A Material Design card with a shadow effect -->
   <mat-card class="cardWithShadow">
     <mat-card-content class="p-24">
+      <!-- Flex container for the card title, centered horizontally -->
       <mat-card-title class="title-flex-container">
-        <div layout="row" layout-align="center center  ">Employees</div>
+        <div layout="row" layout-align="center center">Employees</div>
         <div
           fxLayout="row"
           fxLayoutAlign="start center"
           fxLayout.lt-md="column"
           fxLayoutAlign.lt-md="center center"
         >
+          <!-- Material form field with an input for filtering the table data -->
           <mat-form-field appearance="outline">
             <mat-label>Filter</mat-label>
             <input
@@ -18,19 +22,24 @@
               #input
             />
           </mat-form-field>
+          <!-- Material raised button for adding a new employee -->
           <button
             mat-raised-button
             class="create-btn"
             color="primary"
-            (click)="OpenAddEmployee()"
+            (click)="openAddEmployee()"
           >
             Create
           </button>
         </div>
       </mat-card-title>
+
+      <!-- A responsive table to display employee data -->
       <div class="table-responsive m-t-16">
         <table mat-table [dataSource]="dataSource" class="w-100">
-          <!-- Position Column -->
+          <!-- Define columns for the table -->
+
+          <!-- Column for displaying employee name -->
           <ng-container matColumnDef="name">
             <th
               mat-header-cell
@@ -44,7 +53,7 @@
             </td>
           </ng-container>
 
-          <!-- Name Column -->
+          <!-- Column for displaying employee designation -->
           <ng-container matColumnDef="age">
             <th
               mat-header-cell
@@ -58,7 +67,7 @@
             </td>
           </ng-container>
 
-          <!-- Weight Column -->
+          <!-- Column for displaying employee's manager -->
           <ng-container matColumnDef="manager">
             <th
               mat-header-cell
@@ -68,15 +77,18 @@
               Manager
             </th>
             <td mat-cell *matCellDef="let element" class="mat-body-1">
-              <strong>{{
-                element.managerIsAppointed
-                  ? element.managerName
-                  : "Not Appointed"
-              }}</strong>
+              <!-- Show the manager's name if appointed, otherwise display "Not Appointed" -->
+              <strong>
+                {{
+                  element.managerIsAppointed
+                    ? element.managerName
+                    : "Not Appointed"
+                }}
+              </strong>
             </td>
           </ng-container>
 
-          <!-- Symbol Column -->
+          <!-- Column for displaying employee department -->
           <ng-container matColumnDef="department">
             <th
               mat-header-cell
@@ -90,7 +102,7 @@
             </td>
           </ng-container>
 
-          <!-- Action Column -->
+          <!-- Column for edit button -->
           <ng-container matColumnDef="edit">
             <th
               mat-header-cell
@@ -100,16 +112,18 @@
               Edit
             </th>
             <td mat-cell *matCellDef="let element" class="mat-body-1">
+              <!-- Material icon button to open the edit dialog for the selected employee -->
               <button
                 mat-icon-button
                 color="primary"
-                (click)="OpenEditEmployee(element)"
+                (click)="openEditEmployee(element)"
               >
                 <mat-icon>edit</mat-icon>
               </button>
             </td>
           </ng-container>
 
+          <!-- Column for delete button -->
           <ng-container matColumnDef="delete">
             <th
               mat-header-cell
@@ -119,21 +133,25 @@
               Delete
             </th>
             <td mat-cell *matCellDef="let element" class="mat-body-1">
+              <!-- Material icon button to open the delete confirmation dialog for the selected employee -->
               <button
                 mat-icon-button
                 color="warn"
-                (click)="DeleteEmployee(element.employeeID)"
+                (click)="deleteEmployee(element.employeeID)"
               >
                 <mat-icon>delete</mat-icon>
               </button>
             </td>
           </ng-container>
 
+          <!-- Define table header row and data rows -->
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
         </table>
       </div>
     </mat-card-content>
+
+    <!-- Material paginator to handle pagination -->
     <mat-paginator
       [length]="totalItems"
       [pageSize]="pageSize"
@@ -143,4 +161,5 @@
     >
     </mat-paginator>
   </mat-card>
-</div>
+  </div>
+  
