--- a/src/app/pages/employee/task-pending/task-pending.component.html
+++ b/src/app/pages/employee/task-pending/task-pending.component.html
@@ -1,20 +1,27 @@
 <div class="col-lg-12">
+    <!-- MatCard to create a card with shadow -->
     <mat-card class="cardWithShadow">
+        <!-- MatCardContent to hold the content of the card -->
         <mat-card-content class="p-24">
+            <!-- MatCardTitle to display the title of the card -->
             <mat-card-title class="title-flex-container">
+                <!-- Title for the Pending Tasks table -->
                 <div layout="row" layout-align="center center">
                    Pending Tasks
                 </div>
+                <!-- MatFormField with an input for filtering the table columns -->
                 <mat-form-field appearance="outline">
                     <mat-label>Filter</mat-label>
+                        <!-- Input element with a keyup event to trigger the filter function -->
                         <input matInput (keyup)="applyFilter($event)" placeholder="Search columns" #input>
                 </mat-form-field>
             </mat-card-title>
+            <!-- Table to display the Pending Tasks data -->
             <div class="table-responsive m-t-16">
-                <table  mat-table [dataSource]="dataSource" class="w-100" matSort>
-                    <!-- Position Column -->
+                <table mat-table [dataSource]="dataSource" class="w-100" matSort>
+                    <!-- Column definition for the 'taskName' -->
                     <ng-container matColumnDef="taskName">
-                        <th  mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header >
+                        <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>
                             Name
                         </th>
                         <td mat-cell *matCellDef="let task" class="mat-body-1">
@@ -22,18 +29,19 @@
                         </td>
                     </ng-container>
 
-                    <!-- Name Column -->
+                    <!-- Column definition for the 'taskCreatedDate' -->
                     <ng-container matColumnDef="taskCreatedDate">
-                        <th  mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header >
+                        <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>
                             Created Date
                         </th>
                         <td mat-cell *matCellDef="let task" class="mat-body-1">
                             {{ task.taskCreatedDate | date }}
                         </td>
                     </ng-container>
-                
+
+                    <!-- Column definition for the 'taskDueDate' -->
                     <ng-container matColumnDef="taskDueDate">
-                        <th  mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header >
+                        <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>
                             Due Date
                         </th>
                         <td mat-cell *matCellDef="let task" class="mat-body-1">
@@ -41,21 +49,25 @@
                         </td>
                     </ng-container>
 
+                    <!-- Column definition for the 'taskStatus' -->
                     <ng-container matColumnDef="taskStatus">
-                        <th  mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>
+                        <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>
                             Task Status
                         </th>
                         <td mat-cell *matCellDef="let task" class="mat-body-1">
+                            <!-- Display the task status with specific background color based on the status -->
                             <span class="bg-light-error text-error rounded f-w-600 p-6 p-y-4 f-s-12">
-                            {{ getStatusFromNumber(task.taskStatus) }}
-                        </span>
+                                {{ getStatusFromNumber(task.taskStatus) }}
+                            </span>
                         </td>
                     </ng-container>
 
+                    <!-- Column definition for the 'info' column, which contains a button to show additional task information -->
                     <ng-container matColumnDef="info">
                         <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">Info</th>
                         <td mat-cell *matCellDef="let element" class="mat-body-1">
                             <ng-container>
+                                <!-- Button to show the task description in a dialog on click -->
                                 <button mat-icon-button color="primary" (click)="OpenTaskDescription(element.taskDescription)">
                                     <mat-icon>info</mat-icon>
                                 </button>
@@ -63,23 +75,25 @@
                         </td>
                     </ng-container>
 
-                    <!-- Action Column -->
+                    <!-- Column definition for the 'edit' column, which contains a button to edit the task -->
                     <ng-container matColumnDef="edit">
                         <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">Update Task</th>
                         <td mat-cell *matCellDef="let task" class="mat-body-1">
-                            <button mat-icon-button color="primary" (click)="OpenEditEmployeeTask(task)" >
+                            <!-- Button to open the edit task dialog on click -->
+                            <button mat-icon-button color="primary" (click)="OpenEditEmployeeTask(task)">
                                 <mat-icon>edit</mat-icon>
                             </button>
                         </td>
                     </ng-container>
 
-
+                    <!-- Header row definition -->
                     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                    <!-- Data row definition with row data mapped to columns -->
                     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
                 </table>
             </div>
         </mat-card-content>
-        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" [pageSize]="5" > </mat-paginator>
+        <!-- MatPaginator to add pagination to the table -->
+        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" [pageSize]="5"></mat-paginator>
     </mat-card>
 </div>
-
