--- a/src/app/pages/manager/employee-list/employee-list.component.html
+++ b/src/app/pages/manager/employee-list/employee-list.component.html
@@ -1,10 +1,14 @@
 <div class="col-lg-12">
+    <!-- Outer container with a Material Design card -->
     <mat-card class="cardWithShadow">
         <mat-card-content class="p-24">
+            <!-- Card title with search filter -->
             <mat-card-title class="title-flex-container">
+                <!-- Title for the table -->
                 <div layout="row" layout-align="center center">
                     Employees
                 </div>
+                <!-- Search filter input field -->
                 <div>
                     <mat-form-field appearance="outline">
                         <mat-label>Filter</mat-label>
@@ -12,23 +16,33 @@
                     </mat-form-field>
                 </div>
             </mat-card-title>
+            <!-- Table container with responsive design -->
             <div class="table-responsive m-t-16">
-                <table mat-table [dataSource]="dataSource" class="w-100" >
-                    <!-- Position Column -->
+                <!-- Material table with data source binding -->
+                <table mat-table [dataSource]="dataSource" class="w-100">
+                    <!-- Column definitions -->
+
+                    <!-- Name Column -->
                     <ng-container matColumnDef="name">
+                        <!-- Header cell for 'Name' column -->
                         <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">
                             Name
                         </th>
+                        <!-- Cell data for 'Name' column -->
                         <td mat-cell *matCellDef="let element" class="mat-body-1">
                             <ng-container>
                                 {{ element.employeeName }}
                             </ng-container>
                         </td>
                     </ng-container>
+
+                    <!-- Designation Column -->
                     <ng-container matColumnDef="designation">
+                        <!-- Header cell for 'Designation' column -->
                         <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">
                             Designation
                         </th>
+                        <!-- Cell data for 'Designation' column -->
                         <td mat-cell *matCellDef="let element" class="mat-body-1">
                             <ng-container>
                                 {{ element.designation }}
@@ -37,22 +51,27 @@
                     </ng-container>
 
                     <!-- Action Column -->
-                    <ng-container matColumnDef="action" >
+                    <ng-container matColumnDef="action">
+                        <!-- Header cell for 'Action' column -->
                         <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">Action</th>
+                        <!-- Cell data for 'Action' column -->
                         <td mat-cell *matCellDef="let element" class="mat-body-1">
                             <ng-container>
-                            <button mat-icon-button color="primary" (click)="navigateToEmployeeDetails(element.employeeID)">
-                                <mat-icon>assignment</mat-icon>
-                            </button>
-                        </ng-container>
+                                <!-- Button to navigate to employee details using 'employeeID' -->
+                                <button mat-icon-button color="primary" (click)="navigateToEmployeeDetails(element.employeeID)">
+                                    <mat-icon>assignment</mat-icon>
+                                </button>
+                            </ng-container>
                         </td>
                     </ng-container>
 
+                    <!-- Table rows definition -->
                     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
                 </table>
             </div>
         </mat-card-content>
-        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" [pageSize]="5"> </mat-paginator>
+        <!-- Paginator component for pagination -->
+        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" [pageSize]="5"></mat-paginator>
     </mat-card>
 </div>
