--- a/src/app/layouts/blank/blank.component.html
+++ b/src/app/layouts/blank/blank.component.html
@@ -1,11 +1,3 @@
-<!-- ============================================================== -->
-<!-- Only router without any element -->
-<!-- ============================================================== -->
-<mat-sidenav-container
-  class="mainWrapper blue_theme"
-  autosize
-  autoFocus
-  dir="ltr"
->
+<mat-sidenav-container class="mainWrapper blue_theme" autosize autoFocus dir="ltr">
   <router-outlet></router-outlet>
 </mat-sidenav-container>
