--- a/src/app/pages/authentication/forgot-password/forgot-password.component.html
+++ b/src/app/pages/authentication/forgot-password/forgot-password.component.html
@@ -1,100 +1,89 @@
 <div class="blank-layout-container justify-content-center align-items-center bg-light-primary">
-    <div class="position-relative row w-100 h-100 bg-gredient justify-content-center">
-      <div class="col-lg-4 d-flex align-items-center">
-        <mat-card class="cardWithShadow boxed-auth">
-          <mat-card-content class="p-32">
-            <div class="text-center">
-              <a [routerLink]="['/dashboard']">
-                <img src="./assets/images/logos/stint360-logo.png" class="align-middle m-2" alt="logo" width="150px"/>
-              </a>
-            </div>
+  <div class="position-relative row w-100 h-100 bg-gredient justify-content-center">
+    <div class="col-lg-4 d-flex align-items-center">
+      <mat-card class="cardWithShadow boxed-auth">
+        <mat-card-content class="p-32">
 
-            <form  *ngIf="!openOtpTemplate" class="m-t-30"  [formGroup]="forgotPasswordForm" (ngSubmit)="forgotPassword()">
-         
-              <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block">Email Adddress</mat-label>
+          <div class="text-center">
+            <a [routerLink]="['/dashboard']">
+              <img src="./assets/images/logos/stint360-logo.png" class="align-middle m-2" alt="logo" width="150px" />
+            </a>
+          </div>
+
+          <form *ngIf="!openOtpTemplate" class="m-t-30" [formGroup]="forgotPasswordForm" (ngSubmit)="forgotPassword()">
+            <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block">Email Adddress</mat-label>
+            <mat-form-field appearance="outline" class="w-100" color="primary">
+              <input matInput type="email" formControlName="email" placeholder="sample@mail.com" />
+            </mat-form-field>
+            <div class="error-container">
+              <div *ngIf="email?.touched && email?.errors?.['required']">
+                <mat-error class="custom-error">
+                  Email is <strong>required</strong>
+                </mat-error>
+              </div>
+              <div *ngIf="email?.errors?.['pattern']">
+                <mat-error class="custom-error">
+                  Email should have a valid format
+                </mat-error>
+              </div>
+              <div *ngIf="email?.hasError('emailNotFound')">
+                <mat-error>
+                  Email Not Found. Please try again.
+                </mat-error>
+              </div>
+            </div>
+            <button type="submit" mat-flat-button class="w-100" color="primary" [disabled]="!forgotPasswordForm.valid">
+              <span>Send OTP</span>
+            </button>
+            <!-- input -->
+          </form>
+
+          <div *ngIf="openOtpTemplate">
+            <form class="m-t-30" [formGroup]="verifyForm" (ngSubmit)="verifyOtp()">
+              <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block">Please Enter Otp</mat-label>
               <mat-form-field appearance="outline" class="w-100" color="primary">
-                <input matInput type="email" formControlName="email" placeholder="sample@mail.com"/>
+                <input matInput type="text" formControlName="otp" placeholder="Otp" />
               </mat-form-field>
               <div class="error-container">
-                <div *ngIf="email?.touched && email?.errors?.['required']">
+                <div *ngIf="otp?.touched && otp?.errors?.['required']">
                   <mat-error class="custom-error">
-                    Email is <strong>required</strong>
+                    OTP is <strong>required</strong>
                   </mat-error>
                 </div>
-                <div *ngIf="email?.errors?.['pattern']">
-                  <mat-error class="custom-error">
-                    Email should have a valid format
+                <div *ngIf="otp?.hasError('invalidOtp')">
+                  <mat-error>
+                    Invalid Otp. Please try again.
                   </mat-error>
                 </div>
-                <div *ngIf="email?.hasError('emailNotFound')">
-                  <mat-error >
-                    Email Not Found. Please try again.
+                <div *ngIf="otp?.hasError('otpExpired')">
+                  <mat-error>
+                    Otp has been expired. Please try again.
                   </mat-error>
                 </div>
               </div>
-              
-
-              <!-- <button type="submit" mat-flat-button [color]="isLoading ? 'white' : 'primary' " class="w-100">
-                 <span>Send OTP</span>
-                  <mat-spinner *ngIf="isLoading"  diameter="24" ></mat-spinner> 
-              </button> -->
-
-              <button type="submit" mat-flat-button class="w-100" color="primary" [disabled]="!forgotPasswordForm.valid">
-                <span>Send OTP</span>
-              <!-- <mat-spinner *ngIf="isLoading"  diameter="24" ></mat-spinner> -->
-             </button>
-     
+              <button type="submit" mat-flat-button color="primary" class="w-100">
+                Submit
+              </button>
+              <span class="d-block f-w-500 text-right m-t-12 d-flex justify-content-between">
+                <div class="text-decoration-none f-w-500 f-s-14">
+                  <a class="text-decoration-none f-w-500 f-s-14" (click)="resendOTP()"
+                    style="cursor: pointer; text-decoration: underline;">Resend OTP</a>
+                </div>
+                <div class="text-decoration-none f-w-500 f-s-14" style="color: red">
+                  Your OTP expired in {{ formatTime(countdown) }}
+                </div>
+              </span>
               <!-- input -->
             </form>
-
-            <div *ngIf="openOtpTemplate">
-
-              <form class="m-t-30"  [formGroup]="verifyForm" (ngSubmit)="verifyOtp()">
-         
-                <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block">Please Enter Otp</mat-label>
-                <mat-form-field appearance="outline" class="w-100" color="primary">
-                  <input matInput type="text" formControlName="otp" placeholder="Otp"/>
-                </mat-form-field>
-                <div class="error-container">
-                  <div *ngIf="otp?.touched && otp?.errors?.['required']">
-                    <mat-error class="custom-error">
-                      OTP is <strong>required</strong>
-                    </mat-error>
-                  </div>
-                  <div *ngIf="otp?.hasError('invalidOtp')">
-                    <mat-error >
-                      Invalid Otp. Please try again.
-                    </mat-error>
-                  </div>
-                  <div *ngIf="otp?.hasError('otpExpired')">
-                    <mat-error >
-                      Otp has been expired. Please try again.
-                    </mat-error>
-                  </div>
-                </div>
-                <button type="submit" mat-flat-button color="primary" class="w-100">
-                  Submit
-                </button>
-
-                <span class="d-block f-w-500 text-right m-t-12 d-flex justify-content-between">
-                  <div class="text-decoration-none f-w-500 f-s-14">
-                    <a class="text-decoration-none f-w-500 f-s-14" (click)="resendOTP()" style="cursor: pointer; text-decoration: underline;">Resend OTP</a>
-                  </div>
-                  <div class="text-decoration-none f-w-500 f-s-14" style="color: red">
-                    Your OTP expired in {{ formatTime(countdown) }}
-                  </div>
-                </span>
-                   <!-- input -->
-              </form>
-
-            </div>
-            <span class="d-block f-w-500 text-center m-t-24">Already have an Account?
-    
-              <a [routerLink]="['/authentication/login']" class="text-decoration-none text-primary f-w-500 f-s-14">
-                Sign In</a>
-            </span>
-          </mat-card-content>
-        </mat-card>
-      </div>
+          </div>
+          
+          <span class="d-block f-w-500 text-center m-t-24">Already have an Account?
+            <a [routerLink]="['/authentication/login']" class="text-decoration-none text-primary f-w-500 f-s-14">
+              Sign In
+            </a>
+          </span>
+        </mat-card-content>
+      </mat-card>
     </div>
   </div>
+</div>
