--- a/src/app/pages/dashboard/employee-dashboard/employee-dashboard.component.html
+++ b/src/app/pages/dashboard/employee-dashboard/employee-dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-lg-12">
-      <h3>Welcome {{ employeeDetails.employeeName | uppercase }}!</h3>
+      <h3>Welcome {{ employeeDetails?.employeeName | uppercase }}!</h3>
       <div class="row">
         <!-- --------------------------------------------------------------------------- -->
         <!-- Widgets -->
@@ -104,11 +104,11 @@
          
           <mat-card>
             <mat-card-content>
-              <p><strong>Name</strong> : {{ employeeDetails.employeeName }} </p>
-              <p><strong>Email</strong> : {{ employeeDetails.email }} </p>
-              <p><strong>Phone</strong> : {{ employeeDetails.phone }} </p>
-              <p><strong>Address</strong>  : {{ employeeDetails.address }} </p>
-              <p><strong>Designation</strong>  : {{ employeeDetails.designation }} </p>
+              <p><strong>Name</strong> : {{ employeeDetails?.employeeName }} </p>
+              <p><strong>Email</strong> : {{ employeeDetails?.email }} </p>
+              <p><strong>Phone</strong> : {{ employeeDetails?.phone }} </p>
+              <p><strong>Address</strong>  : {{ employeeDetails?.address }} </p>
+              <p><strong>Designation</strong>  : {{ employeeDetails?.designation }} </p>
             </mat-card-content>
           </mat-card>
 
