--- a/src/app/pages/dashboard/manager-dashboard/manager-dashboard.component.html
+++ b/src/app/pages/dashboard/manager-dashboard/manager-dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-lg-12">
       
-      <h3>Welcome {{managerDetails.departmentName | uppercase}}  Manager! </h3>
+      <h3>Welcome {{managerDetails?.departmentName | uppercase}}  Manager! </h3>
       <div class="row">
         <!-- --------------------------------------------------------------------------- -->
         <!-- Widgets -->
@@ -102,11 +102,11 @@
          
           <mat-card>
             <mat-card-content>
-              <p><strong>Name</strong> : {{ managerDetails.managerName }} </p>
-              <p><strong>Email</strong> : {{ managerDetails.email }} </p>
-              <p><strong>Phone</strong> : {{ managerDetails.phone }} </p>
-              <p><strong>Address</strong>  : {{ managerDetails.address }} </p>
-              <p><strong>Department</strong>  : {{ managerDetails.departmentName | uppercase }} </p>
+              <p><strong>Name</strong> : {{ managerDetails?.managerName }} </p>
+              <p><strong>Email</strong> : {{ managerDetails?.email }} </p>
+              <p><strong>Phone</strong> : {{ managerDetails?.phone }} </p>
+              <p><strong>Address</strong>  : {{ managerDetails?.address }} </p>
+              <p><strong>Department</strong>  : {{ managerDetails?.departmentName | uppercase }} </p>
             </mat-card-content>
           </mat-card>
           </div>
