--- a/src/app/pages/authentication/forgot-password/forgot-password.component.html
+++ b/src/app/pages/authentication/forgot-password/forgot-password.component.html
@@ -1,100 +1,89 @@
 <div class="blank-layout-container justify-content-center align-items-center bg-light-primary">
-    <div class="position-relative row w-100 h-100 bg-gredient justify-content-center">
-      <div class="col-lg-4 d-flex align-items-center">
-        <mat-card class="cardWithShadow boxed-auth">
-          <mat-card-content class="p-32">
-            <div class="text-center">
-              <a [routerLink]="['/dashboard']">
-                <img src="./assets/images/logos/stint360-logo.png" class="align-middle m-2" alt="logo" width="150px"/>
-              </a>
-            </div>
+  <!-- Container for the entire authentication box -->
+  <div class="position-relative row w-100 h-100 bg-gredient justify-content-center">
+    <!-- Row containing the authentication box -->
+    <div class="col-lg-4 d-flex align-items-center">
+      <!-- Column containing the material card for the authentication -->
+      <mat-card class="cardWithShadow boxed-auth">
+        <!-- Material card content -->
+        <mat-card-content class="p-32">
+          <!-- Logo -->
+          <div class="text-center">
+            <a [routerLink]="['/dashboard']">
+              <img src="./assets/images/logos/stint360-logo.png" class="align-middle m-2" alt="logo" width="150px"/>
+            </a>
+          </div>
 
-            <form  *ngIf="!openOtpTemplate" class="m-t-30"  [formGroup]="forgotPasswordForm" (ngSubmit)="forgotPassword()">
-         
-              <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block">Email Adddress</mat-label>
+          <!-- Forgot Password Form -->
+          <form *ngIf="!openOtpTemplate" class="m-t-30" [formGroup]="forgotPasswordForm" (ngSubmit)="forgotPassword()">
+            <!-- Email Address Input -->
+            <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block">Email Address</mat-label>
+            <!-- Material form field for email input -->
+            <mat-form-field appearance="outline" class="w-100" color="primary">
+              <input matInput type="email" formControlName="email" placeholder="sample@mail.com"/>
+            </mat-form-field>
+            <!-- Error messages for email input validation -->
+            <div class="error-container">
+              <div *ngIf="email?.touched && email?.errors?.['required']">
+                <mat-error class="custom-error">Email is <strong>required</strong></mat-error>
+              </div>
+              <div *ngIf="email?.errors?.['pattern']">
+                <mat-error class="custom-error">Email should have a valid format</mat-error>
+              </div>
+              <div *ngIf="email?.hasError('emailNotFound')">
+                <mat-error>Email Not Found. Please try again.</mat-error>
+              </div>
+            </div>
+            <!-- Send OTP Button -->
+            <button type="submit" mat-flat-button class="w-100" color="primary" [disabled]="!forgotPasswordForm.valid">
+              <span>Send OTP</span>
+            </button>
+          </form>
+
+          <!-- OTP Verification Form -->
+          <div *ngIf="openOtpTemplate">
+            <form class="m-t-30" [formGroup]="verifyForm" (ngSubmit)="verifyOtp()">
+              <!-- OTP Input -->
+              <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block">Please Enter OTP</mat-label>
+              <!-- Material form field for OTP input -->
               <mat-form-field appearance="outline" class="w-100" color="primary">
-                <input matInput type="email" formControlName="email" placeholder="sample@mail.com"/>
+                <input matInput type="text" formControlName="otp" placeholder="OTP"/>
               </mat-form-field>
+              <!-- Error messages for OTP input validation -->
               <div class="error-container">
-                <div *ngIf="email?.touched && email?.errors?.['required']">
-                  <mat-error class="custom-error">
-                    Email is <strong>required</strong>
-                  </mat-error>
+                <div *ngIf="otp?.touched && otp?.errors?.['required']">
+                  <mat-error class="custom-error">OTP is <strong>required</strong></mat-error>
                 </div>
-                <div *ngIf="email?.errors?.['pattern']">
-                  <mat-error class="custom-error">
-                    Email should have a valid format
-                  </mat-error>
+                <div *ngIf="otp?.hasError('invalidOtp')">
+                  <mat-error>Invalid OTP. Please try again.</mat-error>
                 </div>
-                <div *ngIf="email?.hasError('emailNotFound')">
-                  <mat-error >
-                    Email Not Found. Please try again.
-                  </mat-error>
+                <div *ngIf="otp?.hasError('otpExpired')">
+                  <mat-error>Otp has been expired. Please try again.</mat-error>
                 </div>
               </div>
-              
-
-              <!-- <button type="submit" mat-flat-button [color]="isLoading ? 'white' : 'primary' " class="w-100">
-                 <span>Send OTP</span>
-                  <mat-spinner *ngIf="isLoading"  diameter="24" ></mat-spinner> 
-              </button> -->
-
-              <button type="submit" mat-flat-button class="w-100" color="primary" [disabled]="!forgotPasswordForm.valid">
-                <span>Send OTP</span>
-              <!-- <mat-spinner *ngIf="isLoading"  diameter="24" ></mat-spinner> -->
-             </button>
-     
-              <!-- input -->
-            </form>
-
-            <div *ngIf="openOtpTemplate">
-
-              <form class="m-t-30"  [formGroup]="verifyForm" (ngSubmit)="verifyOtp()">
-         
-                <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block">Please Enter Otp</mat-label>
-                <mat-form-field appearance="outline" class="w-100" color="primary">
-                  <input matInput type="text" formControlName="otp" placeholder="Otp"/>
-                </mat-form-field>
-                <div class="error-container">
-                  <div *ngIf="otp?.touched && otp?.errors?.['required']">
-                    <mat-error class="custom-error">
-                      OTP is <strong>required</strong>
-                    </mat-error>
-                  </div>
-                  <div *ngIf="otp?.hasError('invalidOtp')">
-                    <mat-error >
-                      Invalid Otp. Please try again.
-                    </mat-error>
-                  </div>
-                  <div *ngIf="otp?.hasError('otpExpired')">
-                    <mat-error >
-                      Otp has been expired. Please try again.
-                    </mat-error>
-                  </div>
+              <!-- Verify OTP Button -->
+              <button type="submit" mat-flat-button color="primary" class="w-100">
+                Submit
+              </button>
+              <!-- Resend OTP link and countdown message -->
+              <span class="d-block f-w-500 text-right m-t-12 d-flex justify-content-between">
+                <div class="text-decoration-none f-w-500 f-s-14">
+                  <a class="text-decoration-none f-w-500 f-s-14" (click)="resendOTP()" style="cursor: pointer; text-decoration: underline;">Resend OTP</a>
                 </div>
-                <button type="submit" mat-flat-button color="primary" class="w-100">
-                  Submit
-                </button>
+                <div class="text-decoration-none f-w-500 f-s-14" style="color: red">
+                  Your OTP expired in {{ formatTime(countdown) }}
+                </div>
+              </span>
+            </form>
+          </div>
 
-                <span class="d-block f-w-500 text-right m-t-12 d-flex justify-content-between">
-                  <div class="text-decoration-none f-w-500 f-s-14">
-                    <a class="text-decoration-none f-w-500 f-s-14" (click)="resendOTP()" style="cursor: pointer; text-decoration: underline;">Resend OTP</a>
-                  </div>
-                  <div class="text-decoration-none f-w-500 f-s-14" style="color: red">
-                    Your OTP expired in {{ formatTime(countdown) }}
-                  </div>
-                </span>
-                   <!-- input -->
-              </form>
-
-            </div>
-            <span class="d-block f-w-500 text-center m-t-24">Already have an Account?
-    
-              <a [routerLink]="['/authentication/login']" class="text-decoration-none text-primary f-w-500 f-s-14">
-                Sign In</a>
-            </span>
-          </mat-card-content>
-        </mat-card>
-      </div>
+          <!-- Sign In link -->
+          <span class="d-block f-w-500 text-center m-t-24">Already have an Account?
+            <a [routerLink]="['/authentication/login']" class="text-decoration-none text-primary f-w-500 f-s-14">
+              Sign In</a>
+          </span>
+        </mat-card-content>
+      </mat-card>
     </div>
   </div>
+</div>
