--- a/src/app/pages/department/dialog/department-edit/department-edit.component.html
+++ b/src/app/pages/department/dialog/department-edit/department-edit.component.html
@@ -36,6 +36,6 @@
         <!-- Cancel button to close the dialog without saving changes -->
         <button mat-raised-button type="button" [mat-dialog-close]="false"> Cancel</button>
         <!-- Save button to submit the form and apply the changes to the department -->
-        <button mat-raised-button color="primary" type="submit" [disabled]="departmentForm.invalid"> Create </button>
+        <button mat-raised-button color="primary" type="submit" [disabled]="departmentForm.invalid"> Edit </button>
     </div>
 </form>
